# ai-indie-game-marketing-studio

./: .gitignore  CLAUDE.md  DESC.md  docker-compose.yml
.claude/: settings.local.json
.claude/agents/backend-engineer/: AGENT.md
.claude/agents/competitor-scout/: AGENT.md
.claude/agents/frontend-engineer/: AGENT.md
.claude/agents/full-analysis/: AGENT.md
.claude/agents/launch-prep/: AGENT.md
.claude/agents/marketing-strategy/: AGENT.md
.claude/agents/steam-researcher/: AGENT.md
.claude/agents/streamer-outreach/: AGENT.md
.claude/skills/async-python-patterns/: SKILL.md
.claude/skills/database-migration/: SKILL.md
.claude/skills/database-schema-design/: SKILL.md
.claude/skills/fastapi-python/: SKILL.md
.claude/skills/game-pitch/: SKILL.md
.claude/skills/marketing-plan/: SKILL.md
.claude/skills/next-best-practices/: SKILL.md
.claude/skills/python-error-handling/: SKILL.md
.claude/skills/react-best-practices/: SKILL.md
.claude/skills/react-composition-patterns/: SKILL.md
.claude/skills/review-analyze/: SKILL.md
.claude/skills/steam-analyze/: SKILL.md
.claude/skills/streamer-match/: SKILL.md
.claude/skills/success-case/: SKILL.md
.claude/skills/tag-optimize/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: init_db.py
backend/app/models/: game.py
backend/app/routers/: analysis.py
backend/app/schemas/: game.py
backend/app/services/: analyzer.py  steam.py
frontend/: CLAUDE.md  Dockerfile  pnpm-lock.yaml
production/session-logs/: compaction-log.txt  session-log.md
(+4 files in other folders)
