[project]
name = "gametopia-backend"
version = "0.1.0"
description = "Gametopia AI Indie Game Marketing Assistant - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0",
    "httpx>=0.28",
    "anthropic>=0.43.0",
    "chromadb>=1.0.0",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]
